--- a/StateManagementEx/app/src/main/AndroidManifest.xml
+++ b/StateManagementEx/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StatemanagementEx"
+        android:name=".StateManagementApplication"
         tools:targetApi="35">
         <activity
             android:name=".MainActivity"
