feat: orbit을 이용하여 MVI 구현

--- a/StateManagementEx/gradle/libs.versions.toml
+++ b/StateManagementEx/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ mavericks = "3.0.9"
 hilt = "2.51.1"
 ksp = "2.0.0-1.0.22"
 circuit = "0.26.0"
+orbit = "9.0.0"
+viewmodel = "2.8.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -37,6 +39,10 @@ circuit-foundation = { module = "com.slack.circuit:circuit-foundation", version.
 circuit-codegen-annotation = { module = "com.slack.circuit:circuit-codegen-annotations", version.ref = "circuit" }
 circuit-codegen-ksp = { module = "com.slack.circuit:circuit-codegen", version.ref = "circuit" }
 circuitx-android = { module = "com.slack.circuit:circuitx-android", version.ref = "circuit" }
+orbit-core = { group = "org.orbit-mvi", name = "orbit-core", version.ref = "orbit" }
+orbit-viewmodel = { group = "org.orbit-mvi", name = "orbit-viewmodel", version.ref = "orbit" }
+orbit-compose = { group = "org.orbit-mvi", name = "orbit-compose", version.ref = "orbit" }
+lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "viewmodel" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
